--- a/bixdata_frontend_react/app/globals.css
+++ b/bixdata_frontend_react/app/globals.css
@@ -14,8 +14,51 @@
   }
 }
 
+html {
+  overflow: hidden !important;
+  height: 100%;
+}
+
+
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
 }
+
+#__next {
+  height: 100%;
+}
+
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(4rem);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideOut {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(4rem);
+    opacity: 0;
+  }
+}
+
+.animate-slide-in {
+  animation: slideIn 0.3s ease-out forwards;
+}
+
+.animate-slide-out {
+  animation: slideOut 0.3s ease-in forwards;
+}
+
